Fixed page shifting on cart menu open

--- a/css/main.css
+++ b/css/main.css
@@ -92,11 +92,7 @@ footer.container {
 /* ------- Scrollbar -------*/
 
 ::-webkit-scrollbar {
-  width: 0.4rem;
-}
-
-::-webkit-scrollbar :hover {
-  width: 1rem;
+  width: var(--scrollbar-width);
 }
 
 ::-webkit-scrollbar-track {
@@ -105,6 +101,16 @@ footer.container {
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--color-fg-alt);
+}
+
+.lock-width {
+  padding-right: var(--scrollbar-width);
+}
+
+@supports (scrollbar-gutter: stable both-edges) {
+  .lock-width {
+    scrollbar-gutter: stable both-edges;
+  }
 }
 
 /* ------- Universal ------- */
